fixed Features margin,re: spacing

--- a/css/index.css
+++ b/css/index.css
@@ -249,7 +249,7 @@ button:hover{
 .Features p{
     width:100%;
     text-align: center;
-    padding:40px;
+    margin:30px;
 }
 
 footer{
